[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/Game/Map/MiniMap/miniRoom.png" type="Texture" id=1]
[ext_resource path="res://scripts/Game/Omens/recycler.gd" type="Script" id=2]
[ext_resource path="res://scenes/Game/Omens/ext_slot.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="CircleShape2D" id=2]
radius = 59.5399

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 32 )

[node name="recycler" type="Node2D" groups=["omen"]]
script = ExtResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="Sprite" type="Sprite" parent="StaticBody2D"]
self_modulate = Color( 0, 0.717647, 1, 1 )
texture = ExtResource( 1 )

[node name="light" type="Sprite" parent="StaticBody2D/Sprite"]
visible = false
modulate = Color( 1, 1, 1, 0.25098 )
show_behind_parent = true
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource( 2 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
shape = SubResource( 3 )
shape_centered = false

[node name="ext_slot" parent="." instance=ExtResource( 3 )]
visible = false

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="pressed" from="TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
